# CnC_Remastered_Collection

./: .gitignore  CMakeLists.txt  CnCRemastered.sln  DEFAULTMAP.INI  POWERHD.SHP  README.md  SCU01EA.INI  SCU01EA.MAP  SCU02EA.INI  SIDEHD.SHP  edhi.mix  imgui.ini  rules.ini  s30muumi.mpr
Maps/: zombies defense 2 player.mpr
REDALERT/: 2KEYFRAM.CPP  AUDIO.CPP  AUDIOMIX.H  AUDMIX.CPP  CONQUER.CPP  CONST.CPP  COORD.CPP  CREDITS.CPP  DEBUG.CPP  DEBUG.H  DISPLAY.CPP  DLLInterface.cpp  EGOS.CPP  FUNCTION.H  GADGET.CPP  GLOBALS.CPP  GSCREEN.CPP  INIT.CPP  INTRO.CPP  KEY.CPP  KEY.H  KEYFBUFF.ASM  LIST.H  LOADDLG.CPP  LZW.CPP  MAPEDDLG.CPP  MAPEDIT.CPP  MAPEDIT.H  MAPSEL.CPP  MENUS.CPP  MMX.ASM  MONOC.H  MPLAYER.CPP  MSGBOX.CPP  MapScript.cpp  MapScript.h  NULLDLG.CPP  POWER.CPP  RADAR.CPP  RAWOLAPI.H  (+16 more)
REDALERT/RESOURCE/: RedAlert.rc
REDALERT/WIN32LIB/: DDRAW.CPP  DrawMisc.cpp  FONT.CPP  GBUFFER.CPP  GBUFFER.H  IRANDOM.CPP  KEYBOARD.H  MISC.H  MOUSE.H  MOUSEWW.CPP  MouseShape.h  TOBUFF.CPP  wwstd.h
TIBERIANDAWN/: GLOBALS.CPP
Work/Tilesets/Snow/: Build.bat
code/: CMakeLists.txt  CMakeSettings.json
code/REDALERT/: 2KEYFRAM.CPP  AADATA.CPP  AIRCRAFT.CPP  AUDIOMIX.H  BDATA.CPP  BDATAXML.CPP  BUILDING.CPP  CDATA.CPP  CELL.CPP  CONQUER.CPP  CONSOLE.CPP  COORD.CPP  CREDITS.CPP  DEFINES.H  DIALOG.CPP  DISPLAY.CPP  DISPLAY.H  DLLInterface.cpp  DLLInterfaceEditor.cpp  EDIT.CPP  EGOS.CPP  EXPAND.CPP  EXTERNS.H  FILEBINARY.H  FUNCTION.H  GADGET.CPP  GLOBALS.CPP  GOPTIONS.CPP  GSCREEN.CPP  HOUSE.CPP  HOUSE.H  HOUSECOLOR.H  INIT.CPP  INLINE.H  Image.h  KEY.CPP  KEY.H  LCW.CPP  LOADDLG.CPP  MAPEDDLG.CPP  (+44 more)
code/REDALERT/WIN32LIB/: BUFFER.CPP  BUFFGLBL.CPP  DIPTHONG.CPP  DRAWBUFF.H  DRAWRECT.CPP  DrawMisc.cpp  GBUFFER.CPP  GBUFFER.H  ICONCACH.H  IRANDOM.CPP  MEMFLAG.H  MISC.H  MOUSEWW.CPP  MouseShape.cpp  TIMERINI.CPP  WSA.CPP
code/REDALERT/io/: EventQueue.cpp  EventQueue.h  UserInput.cpp  UserInput.h
code/TIBERIANDAWN/: GSCREEN.CPP  INIT.CPP  JSHELL.H  MOUSE.CPP  REAL.H  SCROLL.CPP  UDATA.CPP  VECTOR.H
code/TIBERIANDAWN/WIN32LIB/: GBUFFER.CPP
code/redalert/: aircraft.cpp  audio.cpp  audiomix.h  audmix.cpp  bdata.cpp  bdata_af.h  briefing.cpp  building.cpp  building.h  cdata.cpp  cell.cpp  cell.h  compat.h  conquer.cpp  const.cpp  coord.cpp  crc32.cpp  crc32.h  defines.h  dialog.cpp  display.cpp  display.h  dllinterface.cpp  edit.cpp  edit.h  egos.cpp  egos.h  ending.cpp  event.cpp  externs.h  ffmpegmovie.cpp  fixed.cpp  fixed.h  foot.cpp  function.h  gadget.cpp  gamedlg.cpp  getcpu.cpp  globals.cpp  gscreen.cpp  (+92 more)
code/redalert/io/: eventqueue.cpp  userinput.cpp  userinput.h
code/redalert/win32lib/: drawbuff.h  drawmisc.cpp  gbuffer.cpp  gbuffer.h  iconset.cpp  keyboard.h  mouse.h  mouseshape.cpp  tobuff.cpp  windows.cpp  wsa.cpp
data/xml/tilesets/: RA_TERRAIN_SNOW.XML  ra_structures.xml
ddraw/ddrawwrapper/: DirectDrawClipperWrapper.cpp  DirectDrawPaletteWrapper.cpp  DirectDrawSurfaceWrapper.cpp  DirectDrawWrapper.cpp  DirectDrawWrapper.h  ddraw.cpp  ddraw.rc  ddraw2.cpp  ddrawwrapper.vcxproj  ddrawwrapper.vcxproj.filters  resource.h
examples/: readme.txt
movies/: SOVIET1.smk  redintro.smk
movies/raw/hires/: run.bat
scripts/: SCU01EA.INI.script  _Global.script
ui/: title.tga
ui/sidebar/: POWERHD_0000.tga  POWERHD_0001.tga  POWERHD_0002.tga
