# CMakeList.txt : CMake project for Red Alert
cmake_minimum_required (VERSION 3.8)

project(REDALERT ASM CXX C)
enable_language(ASM)
set(CMAKE_CXX_FLAGS "")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../)
set(CMAKE_VERBOSE_MAKEFILE ON)

set(src_win32lib
        ./REDALERT/WIN32LIB/TOBUFF.CPP
        ./REDALERT/WIN32LIB/ALLOC.CPP
        ./REDALERT/WIN32LIB/AUDIO.H
        ./REDALERT/WIN32LIB/BUFFER.CPP
        ./REDALERT/WIN32LIB/BUFFER.H
        ./REDALERT/WIN32LIB/BUFFGLBL.CPP
        ./REDALERT/WIN32LIB/DEFINES.H
        ./REDALERT/WIN32LIB/DELAY.CPP
        ./REDALERT/WIN32LIB/DESCMGMT.H
        ./REDALERT/WIN32LIB/DIFFTB.INC
        ./REDALERT/WIN32LIB/DIPTHONG.CPP
        ./REDALERT/WIN32LIB/DIPTHONG.H
        ./REDALERT/WIN32LIB/DPLAY.H
        ./REDALERT/WIN32LIB/DRAWBUFF.H
        ./REDALERT/WIN32LIB/DRAWBUFF.INC
        ./REDALERT/WIN32LIB/DrawMisc.cpp
        ./REDALERT/WIN32LIB/DRAWRECT.CPP
        ./REDALERT/WIN32LIB/DSETUP.H
        ./REDALERT/WIN32LIB/DSOUND.H
        ./REDALERT/WIN32LIB/EXTERNS.H
        ./REDALERT/WIN32LIB/FASTFILE.H
        ./REDALERT/WIN32LIB/FILE.H
        ./REDALERT/WIN32LIB/FILEPCX.H
        ./REDALERT/WIN32LIB/FILETEMP.H
        ./REDALERT/WIN32LIB/FONT.H
        ./REDALERT/WIN32LIB/FUNCTION.H
        ./REDALERT/WIN32LIB/GBUFFER.CPP
        ./REDALERT/WIN32LIB/GBUFFER.H
        ./REDALERT/WIN32LIB/GBUFFER.INC
        ./REDALERT/WIN32LIB/GETSHAPE.CPP
        ./REDALERT/WIN32LIB/ICONCACH.H
        ./REDALERT/WIN32LIB/ICONSET.CPP
        ./REDALERT/WIN32LIB/IFF.CPP
        ./REDALERT/WIN32LIB/IFF.H
        ./REDALERT/WIN32LIB/INDEXTB.INC
        ./REDALERT/WIN32LIB/IRANDOM.CPP
        ./REDALERT/WIN32LIB/KEYBOARD.H
        ./REDALERT/WIN32LIB/KEYBOARD.INC
        ./REDALERT/WIN32LIB/KEYSTRUC.INC
        ./REDALERT/WIN32LIB/LOAD.CPP
        ./REDALERT/WIN32LIB/LOADFONT.CPP
        ./REDALERT/WIN32LIB/MCGAPRIM.INC
        ./REDALERT/WIN32LIB/MEMFLAG.H
        ./REDALERT/WIN32LIB/MISC.H
        ./REDALERT/WIN32LIB/MODEMREG.H
        ./REDALERT/WIN32LIB/MONO.H
        ./REDALERT/WIN32LIB/MOUSE.H
        ./REDALERT/WIN32LIB/MOUSE.INC
        ./REDALERT/WIN32LIB/MouseShape.cpp
        ./REDALERT/WIN32LIB/MouseShape.h
        ./REDALERT/WIN32LIB/MOUSEWW.CPP
        ./REDALERT/WIN32LIB/NYBBTB.INC
        ./REDALERT/WIN32LIB/PALETTE.CPP
        ./REDALERT/WIN32LIB/PALETTE.H
        ./REDALERT/WIN32LIB/PLAYCD.H
        ./REDALERT/WIN32LIB/PROFILE.H
        ./REDALERT/WIN32LIB/PROFILE.INC
        ./REDALERT/WIN32LIB/RAWFILE.H
        ./REDALERT/WIN32LIB/SHAPE.H
        ./REDALERT/WIN32LIB/SHAPE.INC
        ./REDALERT/WIN32LIB/SOS.H
        ./REDALERT/WIN32LIB/SOSCOMP.H
        ./REDALERT/WIN32LIB/SOSDATA.H
        ./REDALERT/WIN32LIB/SOSDEFS.H
        ./REDALERT/WIN32LIB/SOSFNCT.H
        ./REDALERT/WIN32LIB/SOSRES.H
        ./REDALERT/WIN32LIB/SOUND.H
        ./REDALERT/WIN32LIB/SOUNDINT.H
        ./REDALERT/WIN32LIB/STAMP.INC
        ./REDALERT/WIN32LIB/STRUCTS.H
        ./REDALERT/WIN32LIB/SVGAPRIM.INC
        ./REDALERT/WIN32LIB/TILE.H
        ./REDALERT/WIN32LIB/TIMER.CPP
        ./REDALERT/WIN32LIB/TIMER.H
        ./REDALERT/WIN32LIB/TIMERDWN.CPP
        ./REDALERT/WIN32LIB/TIMERINI.CPP
        ./REDALERT/WIN32LIB/VIDEO.H
        ./REDALERT/WIN32LIB/WINCOMM.H
        ./REDALERT/WIN32LIB/WINDOWS.CPP
        ./REDALERT/WIN32LIB/WINHIDE.CPP
        ./REDALERT/WIN32LIB/WRITEPCX.CPP
        ./REDALERT/WIN32LIB/WSA.CPP
        ./REDALERT/WIN32LIB/WSA.H
        ./REDALERT/WIN32LIB/WWFILE.H
        ./REDALERT/WIN32LIB/WWLIB32.H
        ./REDALERT/WIN32LIB/WWMEM.H
        ./REDALERT/WIN32LIB/WWMEM.INC
        ./REDALERT/WIN32LIB/wwstd.h
        ./REDALERT/WIN32LIB/WW_WIN.H
        ./REDALERT/WIN32LIB/_DIPTABL.CPP
)

set(src_REDALERT
        ./REDALERT/2KEYFRAM.CPP
        ./REDALERT/AADATA.CPP
        ./REDALERT/ABSTRACT.CPP
        ./REDALERT/ABSTRACT.H
        ./REDALERT/ADATA.CPP
        ./REDALERT/ADPCM.CPP
        ./REDALERT/AIRCRAFT.CPP
        ./REDALERT/AIRCRAFT.H
        ./REDALERT/ANIM.CPP
        ./REDALERT/ANIM.H
        ./REDALERT/AUDIO.CPP
        ./REDALERT/AUDIO.H
        ./REDALERT/AUDIOMIX.H
        ./REDALERT/AUDMIX.CPP
        ./REDALERT/B64PIPE.CPP
        ./REDALERT/B64PIPE.H
        ./REDALERT/B64STRAW.CPP
        ./REDALERT/B64STRAW.H
        ./REDALERT/BAR.CPP
        ./REDALERT/BAR.H
        ./REDALERT/BASE.CPP
        ./REDALERT/BASE.H
        ./REDALERT/BASE64.CPP
        ./REDALERT/BASE64.H
        ./REDALERT/BBDATA.CPP
        ./REDALERT/BDATA.CPP
        ./REDALERT/BENCH.CPP
        ./REDALERT/BENCH.H
        ./REDALERT/BFIOFILE.CPP
        ./REDALERT/BFIOFILE.H
        ./REDALERT/BIGCHECK.CPP
        ./REDALERT/BIGCHECK.H
        ./REDALERT/BLOWFISH.CPP
        ./REDALERT/BLOWFISH.H
        ./REDALERT/BLOWPIPE.CPP
        ./REDALERT/BLOWPIPE.H
        ./REDALERT/BLWSTRAW.CPP
        ./REDALERT/BLWSTRAW.H
        ./REDALERT/BUFF.CPP
        ./REDALERT/BUFF.H
        ./REDALERT/BUFFERX.H
        ./REDALERT/BUILDING.CPP
        ./REDALERT/BUILDING.H
        ./REDALERT/BULLET.CPP
        ./REDALERT/BULLET.H
        ./REDALERT/CARGO.CPP
        ./REDALERT/CARGO.H
        ./REDALERT/CARRY.CPP
        ./REDALERT/CARRY.H
        ./REDALERT/CBN_.H
        ./REDALERT/CCDDE.CPP
        ./REDALERT/CCDDE.H
        ./REDALERT/CCFILE.CPP
        ./REDALERT/CCFILE.H
        ./REDALERT/CCINI.CPP
        ./REDALERT/CCINI.H
        ./REDALERT/CCMPATH.CPP
        ./REDALERT/CCPTR.CPP
        ./REDALERT/CCPTR.H
        ./REDALERT/CCTEN.CPP
        ./REDALERT/CDATA.CPP
        ./REDALERT/CDFILE.CPP
        ./REDALERT/CDFILE.H
        ./REDALERT/CELL.CPP
        ./REDALERT/CELL.H
        ./REDALERT/CHECKBOX.CPP
        ./REDALERT/CHECKBOX.H
        ./REDALERT/CHEKLIST.CPP
        ./REDALERT/CHEKLIST.H
        ./REDALERT/CLASS.CPP
        ./REDALERT/COLRLIST.CPP
        ./REDALERT/COLRLIST.H
        ./REDALERT/COMBAT.CPP
        ./REDALERT/COMBUF.CPP
        ./REDALERT/COMBUF.H
        ./REDALERT/COMINIT.CPP
        ./REDALERT/COMINIT.H
        ./REDALERT/COMPAT.H
        ./REDALERT/COMQUEUE.CPP
        ./REDALERT/COMQUEUE.H
        ./REDALERT/CONFDLG.CPP
        ./REDALERT/CONFDLG.H
        ./REDALERT/CONNECT.CPP
        ./REDALERT/CONNECT.H
        ./REDALERT/CONNMGR.H
        ./REDALERT/CONQUER.CPP
        ./REDALERT/CONQUER.H
        ./REDALERT/CONST.CPP
        ./REDALERT/CONTROL.CPP
        ./REDALERT/CONTROL.H
        ./REDALERT/COORD.CPP
        ./REDALERT/COORDA.h
        ./REDALERT/CRATE.CPP
        ./REDALERT/CRATE.H
        ./REDALERT/CRC.CPP
        ./REDALERT/CRC.H
        ./REDALERT/CRCPIPE.CPP
        ./REDALERT/CRCPIPE.H
        ./REDALERT/CRCSTRAW.CPP
        ./REDALERT/CRCSTRAW.H
        ./REDALERT/CREDITS.CPP
        ./REDALERT/CREDITS.H
        ./REDALERT/CREW.CPP
        ./REDALERT/CREW.H
        ./REDALERT/CSTRAW.CPP
        ./REDALERT/CSTRAW.H
        ./REDALERT/DDE.CPP
        ./REDALERT/DDE.H
        ./REDALERT/DEBUG.CPP
        ./REDALERT/DEBUG.H
        ./REDALERT/DEFINES.H
        ./REDALERT/DESCDLG.CPP
        ./REDALERT/DESCDLG.H
        ./REDALERT/DIAL8.CPP
        ./REDALERT/DIAL8.H
        ./REDALERT/DIALOG.CPP
        ./REDALERT/DIBAPI.H
        ./REDALERT/DIBFILE.CPP
        ./REDALERT/DIBUTIL.CPP
        ./REDALERT/DIBUTIL.H
        ./REDALERT/DISPLAY.CPP
        ./REDALERT/DISPLAY.H
        ./REDALERT/DLLInterface.cpp
        ./REDALERT/DLLInterface.h
        ./REDALERT/DLLInterfaceEditor.cpp
        ./REDALERT/DOOR.CPP
        ./REDALERT/DOOR.H
        ./REDALERT/DPMI.CPP
        ./REDALERT/DPMI.H
        ./REDALERT/DRIVE.CPP
        ./REDALERT/DRIVE.H
        ./REDALERT/DROP.CPP
        ./REDALERT/DROP.H
        ./REDALERT/DTABLE.CPP
        ./REDALERT/DYNAVEC.CPP
        ./REDALERT/EDIT.CPP
        ./REDALERT/EDIT.H
        ./REDALERT/EGOS.CPP
        ./REDALERT/EGOS.H
        ./REDALERT/ENDING.CPP
        ./REDALERT/ENDING.H
        ./REDALERT/EVENT.CPP
        ./REDALERT/EVENT.H
        ./REDALERT/EXPAND.CPP
        ./REDALERT/EXTERNS.H
        ./REDALERT/FACE.CPP
        ./REDALERT/FACE.H
        ./REDALERT/FACING.CPP
        ./REDALERT/FACING.H
        ./REDALERT/FACTORY.CPP
        ./REDALERT/FACTORY.H
        ./REDALERT/FAKESOCK.H
        ./REDALERT/FIELD.CPP
        ./REDALERT/FIELD.H
        ./REDALERT/FILEPCX.H
        ./REDALERT/FINDPATH.CPP
        ./REDALERT/FIXED.CPP
        ./REDALERT/FIXED.H
        ./REDALERT/FLASHER.CPP
        ./REDALERT/FLASHER.H
        ./REDALERT/FLY.CPP
        ./REDALERT/FLY.H
        ./REDALERT/FOOT.CPP
        ./REDALERT/FOOT.H
        ./REDALERT/FTIMER.H
        ./REDALERT/FUNCTION.H
        ./REDALERT/FUSE.CPP
        ./REDALERT/FUSE.H
        ./REDALERT/GADGET.CPP
        ./REDALERT/GADGET.H
        ./REDALERT/GAMEDLG.CPP
        ./REDALERT/GAMEDLG.H
        ./REDALERT/GAUGE.CPP
        ./REDALERT/GAUGE.H
        ./REDALERT/GETCPU.CPP
        ./REDALERT/GLOBALS.CPP
        ./REDALERT/GOPTIONS.CPP
        ./REDALERT/GOPTIONS.H
        ./REDALERT/GSCREEN.CPP
        ./REDALERT/GSCREEN.H
        ./REDALERT/HDATA.CPP
        ./REDALERT/HEAP.CPP
        ./REDALERT/HEAP.H
        ./REDALERT/HELP.CPP
        ./REDALERT/HELP.H
        ./REDALERT/HOUSE.CPP
        ./REDALERT/HOUSE.H
        ./REDALERT/HSV.CPP
        ./REDALERT/HSV.H
        ./REDALERT/ICONLIST.CPP
        ./REDALERT/ICONLIST.H
        ./REDALERT/IDATA.CPP
        ./REDALERT/INFANTRY.CPP
        ./REDALERT/INFANTRY.H
        ./REDALERT/INI.CPP
        ./REDALERT/INI.H
        ./REDALERT/INIBIN.CPP
        ./REDALERT/INICODE.CPP
        ./REDALERT/INIT.CPP
        ./REDALERT/INLINE.H
        ./REDALERT/INT.CPP
        ./REDALERT/INT.H
        ./REDALERT/INTERNET.CPP
        ./REDALERT/INTERNET.H
        ./REDALERT/INTERPAL.CPP
        ./REDALERT/INTRO.CPP
        ./REDALERT/INTRO.H
        ./REDALERT/IOMAP.CPP
        ./REDALERT/IOOBJ.CPP
        ./REDALERT/IPX.CPP
        ./REDALERT/IPX.H
        ./REDALERT/IPX95.CPP
        ./REDALERT/IPX95.H
        ./REDALERT/IPXADDR.CPP
        ./REDALERT/IPXADDR.H
        ./REDALERT/IPXCONN.CPP
        ./REDALERT/IPXCONN.H
        ./REDALERT/IPXGCONN.CPP
        ./REDALERT/IPXGCONN.H
        ./REDALERT/IPXMGR.CPP
        ./REDALERT/IPXMGR.H
        ./REDALERT/ITABLE.CPP
        ./REDALERT/JSHELL.CPP
        ./REDALERT/JSHELL.H
        ./REDALERT/KEY.CPP
        ./REDALERT/KEY.H
        ./REDALERT/KEYBOARD.H
        ./REDALERT/LANGUAGE.H
        ./REDALERT/LAYER.CPP
        ./REDALERT/LAYER.H
        ./REDALERT/LCW.CPP
        ./REDALERT/LCW.H
        ./REDALERT/LCWPIPE.CPP
        ./REDALERT/LCWPIPE.H
        ./REDALERT/LCWSTRAW.CPP
        ./REDALERT/LCWSTRAW.H
        ./REDALERT/LCWUNCMP.CPP
        ./REDALERT/LED.H
        ./REDALERT/License.txt
        ./REDALERT/LINK.CPP
        ./REDALERT/LINK.H
        ./REDALERT/LINT.H
        ./REDALERT/LIST.CPP
        ./REDALERT/LIST.H
        ./REDALERT/LISTNODE.H
        ./REDALERT/LOADDLG.CPP
        ./REDALERT/LOADDLG.H
        ./REDALERT/LOGIC.CPP
        ./REDALERT/LOGIC.H
        ./REDALERT/LZO.H
        ./REDALERT/LZO1X.H
        ./REDALERT/LZO1X_C.CPP
        ./REDALERT/LZO1X_D.CPP
        ./REDALERT/LZOCONF.H
        ./REDALERT/LZOPIPE.CPP
        ./REDALERT/LZOPIPE.H
        ./REDALERT/LZOSTRAW.CPP
        ./REDALERT/LZOSTRAW.H
        ./REDALERT/LZO_CONF.H
        ./REDALERT/LZW.CPP
        ./REDALERT/LZW.H
        ./REDALERT/LZWPIPE.CPP
        ./REDALERT/LZWPIPE.H
        ./REDALERT/LZWSTRAW.CPP
        ./REDALERT/LZWSTRAW.H
        ./REDALERT/MAP.CPP
        ./REDALERT/MAP.H
        ./REDALERT/MAPEDDLG.CPP
        ./REDALERT/MAPEDIT.CPP
        ./REDALERT/MAPEDIT.H
        ./REDALERT/MAPEDPLC.CPP
        ./REDALERT/MAPEDTM.CPP
        ./REDALERT/MAPSEL.CPP
        ./REDALERT/MCI.CPP
        ./REDALERT/MCI.H
        ./REDALERT/MCIMOVIE.CPP
        ./REDALERT/MCIMOVIE.H
        ./REDALERT/MEMCHECK.H
        ./REDALERT/MENUS.CPP
        ./REDALERT/MESSAGE.H
        ./REDALERT/MiscAsm.cpp
        ./REDALERT/MISSION.CPP
        ./REDALERT/MISSION.H
        ./REDALERT/MIXFILE.CPP
        ./REDALERT/MIXFILE.H
        ./REDALERT/MONOC.CPP
        ./REDALERT/MONOC.H
        ./REDALERT/MOUSE.CPP
        ./REDALERT/MOUSE.H
        ./REDALERT/MOVIE.H
        ./REDALERT/MP.CPP
        ./REDALERT/MP.H
        ./REDALERT/MPGSET.CPP
        ./REDALERT/MPGSET.H
        ./REDALERT/MPLAYER.CPP
        ./REDALERT/MPMGRW.CPP
        ./REDALERT/MPMGRW.H
        ./REDALERT/MPU.CPP
        ./REDALERT/MPU.H
        ./REDALERT/MSGBOX.CPP
        ./REDALERT/MSGBOX.H
        ./REDALERT/MSGLIST.CPP
        ./REDALERT/MSGLIST.H
        ./REDALERT/NETDLG.CPP
        ./REDALERT/NULLCONN.CPP
        ./REDALERT/NULLCONN.H
        ./REDALERT/NULLDLG.CPP
        ./REDALERT/NULLMGR.CPP
        ./REDALERT/NULLMGR.H
        ./REDALERT/OBJECT.CPP
        ./REDALERT/OBJECT.H
        ./REDALERT/OCIDL.H
        ./REDALERT/ODATA.CPP
        ./REDALERT/OPTIONS.CPP
        ./REDALERT/OPTIONS.H
        ./REDALERT/OVERLAY.CPP
        ./REDALERT/OVERLAY.H
        ./REDALERT/PACKET.CPP
        ./REDALERT/PACKET.H
        ./REDALERT/PALETTEC.CPP
        ./REDALERT/PALETTEC.H
        ./REDALERT/PIPE.CPP
        ./REDALERT/PIPE.H
        ./REDALERT/PK.CPP
        ./REDALERT/PK.H
        ./REDALERT/PKPIPE.CPP
        ./REDALERT/PKPIPE.H
        ./REDALERT/PKSTRAW.CPP
        ./REDALERT/PKSTRAW.H
        ./REDALERT/POWER.CPP
        ./REDALERT/POWER.H
        ./REDALERT/PROFILE.CPP
        ./REDALERT/QUEUE.CPP
        ./REDALERT/QUEUE.H
        ./REDALERT/RADAR.CPP
        ./REDALERT/RADAR.H
        ./REDALERT/RADIO.CPP
        ./REDALERT/RADIO.H
        ./REDALERT/RAMFILE.CPP
        ./REDALERT/RAMFILE.H
        ./REDALERT/RAND.CPP
        ./REDALERT/RANDOM.CPP
        ./REDALERT/RANDOM.H
        ./REDALERT/RAWFILE.CPP
        ./REDALERT/RAWFILE.H
        ./REDALERT/RAWOLAPI.CPP
        ./REDALERT/RAWOLAPI.H
        ./REDALERT/READLINE.CPP
        ./REDALERT/READLINE.H
        ./REDALERT/RECT.CPP
        ./REDALERT/RECT.H
        ./REDALERT/REGION.H
        ./REDALERT/REINF.CPP
        ./REDALERT/RGB.CPP
        ./REDALERT/RGB.H
        ./REDALERT/RNDSTRAW.CPP
        ./REDALERT/RNDSTRAW.H
        ./REDALERT/RNG.H
        ./REDALERT/ROTBMP.CPP
        ./REDALERT/ROTBMP.H
        ./REDALERT/RULES.CPP
        ./REDALERT/RULES.H
        ./REDALERT/SAVEDLG.H
        ./REDALERT/SAVELOAD.CPP
        ./REDALERT/SCENARIO.CPP
        ./REDALERT/SCENARIO.H
        ./REDALERT/SCORE.CPP
        ./REDALERT/SCORE.H
        ./REDALERT/SCREEN.H
        ./REDALERT/SCROLL.CPP
        ./REDALERT/SCROLL.H
        ./REDALERT/SDATA.CPP
        ./REDALERT/SEARCH.H
        ./REDALERT/SEDITDLG.CPP
        ./REDALERT/SEDITDLG.H
        ./REDALERT/SENDFILE.CPP
        ./REDALERT/SEQCONN.CPP
        ./REDALERT/SEQCONN.H
        ./REDALERT/SESSION.CPP
        ./REDALERT/SESSION.H
        ./REDALERT/SHA.CPP
        ./REDALERT/SHA.H
        ./REDALERT/Shape.cpp
        ./REDALERT/SHAPEBTN.CPP
        ./REDALERT/SHAPEBTN.H
        ./REDALERT/SHAPIPE.CPP
        ./REDALERT/SHAPIPE.H
        ./REDALERT/SHASTRAW.CPP
        ./REDALERT/SHASTRAW.H
        ./REDALERT/SIDEBAR.CPP
        ./REDALERT/SIDEBAR.H
        ./REDALERT/SIDEBARGlyphx.CPP
        ./REDALERT/SIDEBARGlyphx.H
        ./REDALERT/SLIDER.CPP
        ./REDALERT/SLIDER.H
        ./REDALERT/SMUDGE.CPP
        ./REDALERT/SMUDGE.H
        ./REDALERT/SOUNDDLG.CPP
        ./REDALERT/SOUNDDLG.H
        ./REDALERT/SPECIAL.CPP
        ./REDALERT/SPECIAL.H
        ./REDALERT/SPRITE.CPP
        ./REDALERT/STAGE.H
        ./REDALERT/STARTUP.CPP
        ./REDALERT/STATBTN.CPP
        ./REDALERT/STATBTN.H
        ./REDALERT/STATS.CPP
        ./REDALERT/STRAW.CPP
        ./REDALERT/STRAW.H
        ./REDALERT/STUB.CPP
        ./REDALERT/STYLE.H
        ./REDALERT/SUPER.CPP
        ./REDALERT/SUPER.H
        ./REDALERT/SURFACE.CPP
        ./REDALERT/SURFACE.H
        ./REDALERT/TAB.CPP
        ./REDALERT/TAB.H
        ./REDALERT/TACTION.CPP
        ./REDALERT/TACTION.H
        ./REDALERT/TARGET.CPP
        ./REDALERT/TARGET.H
        ./REDALERT/TCPIP.CPP
        ./REDALERT/TCPIP.H
        ./REDALERT/TDATA.CPP
        ./REDALERT/TEAM.CPP
        ./REDALERT/TEAM.H
        ./REDALERT/TEAMTYPE.CPP
        ./REDALERT/TEAMTYPE.H
        ./REDALERT/TECHNO.CPP
        ./REDALERT/TECHNO.H
        ./REDALERT/TEMPLATE.CPP
        ./REDALERT/TEMPLATE.H
        ./REDALERT/TENMGR.CPP
        ./REDALERT/TENMGR.H
        ./REDALERT/TERRAIN.CPP
        ./REDALERT/TERRAIN.H
        ./REDALERT/TEVENT.CPP
        ./REDALERT/TEVENT.H
        ./REDALERT/TEXTBTN.CPP
        ./REDALERT/TEXTBTN.H
        ./REDALERT/THEME.CPP
        ./REDALERT/THEME.H
        ./REDALERT/TOGGLE.CPP
        ./REDALERT/TOGGLE.H
        ./REDALERT/TOOLTIP.CPP
        ./REDALERT/TOOLTIP.H
        ./REDALERT/TRACKER.CPP
        ./REDALERT/TRIGGER.CPP
        ./REDALERT/TRIGGER.H
        ./REDALERT/TRIGTYPE.CPP
        ./REDALERT/TRIGTYPE.H
        ./REDALERT/TXTLABEL.CPP
        ./REDALERT/TXTLABEL.H
        ./REDALERT/TYPE.H
        ./REDALERT/UDATA.CPP
        ./REDALERT/UDPADDR.CPP
        ./REDALERT/UNIT.CPP
        ./REDALERT/UNIT.H
        ./REDALERT/UTRACKER.CPP
        ./REDALERT/UTRACKER.H
        ./REDALERT/VDATA.CPP
        ./REDALERT/VECTOR.CPP
        ./REDALERT/VECTOR.H
        ./REDALERT/VERSION.CPP
        ./REDALERT/VERSION.H
        ./REDALERT/VESSEL.CPP
        ./REDALERT/VESSEL.H
        ./REDALERT/VISUDLG.CPP
        ./REDALERT/VISUDLG.H
        ./REDALERT/VORTEX.CPP
        ./REDALERT/VORTEX.H
        ./REDALERT/VQAMOVIE.CPP
        ./REDALERT/VQAMOVIE.H
        ./REDALERT/W95TRACE.CPP
        ./REDALERT/W95TRACE.H
        ./REDALERT/WARHEAD.CPP
        ./REDALERT/WARHEAD.H
        ./REDALERT/WATCOM.H
        ./REDALERT/WEAPON.CPP
        ./REDALERT/WEAPON.H
        ./REDALERT/WINSTUB.CPP
        ./REDALERT/WOLAPIOB.CPP
        ./REDALERT/WOLAPIOB.H
        ./REDALERT/WOLDEBUG.H
        ./REDALERT/WOLEDIT.CPP
        ./REDALERT/WOLEDIT.H
        ./REDALERT/WOLSTRNG.CPP
        ./REDALERT/WOLSTRNG.H
        ./REDALERT/WOL_CGAM.CPP
        ./REDALERT/WOL_CHAT.CPP
        ./REDALERT/WOL_DNLD.CPP
        ./REDALERT/WOL_GSUP.CPP
        ./REDALERT/WOL_GSUP.H
        ./REDALERT/WOL_LOGN.CPP
        ./REDALERT/WOL_MAIN.CPP
        ./REDALERT/WOL_OPT.CPP
        ./REDALERT/WSNWLINK.H
        ./REDALERT/WSPIPX.CPP
        ./REDALERT/WSPIPX.H
        ./REDALERT/WSPROTO.CPP
        ./REDALERT/WSPROTO.H
        ./REDALERT/WSPUDP.CPP
        ./REDALERT/WSPUDP.H
        ./REDALERT/WWALLOC.H
        ./REDALERT/WWFILE.H
        ./REDALERT/XPIPE.CPP
        ./REDALERT/XPIPE.H
        ./REDALERT/XSTRAW.CPP
        ./REDALERT/XSTRAW.H
        ./REDALERT/_WSPROTO.CPP
        ./REDALERT/_WSPROTO.H
#        ./REDALERT/MAPSCRIPT.CPP
        ./REDALERT/TXTPRNT.CPP
)

set(src_external
	#glew
	./external/gl/glew.c

	#libsmacker
	./external/libsmacker/smacker.c
	./external/libsmacker/smacker.h
	./external/libsmacker/smk_bitstream.c
	./external/libsmacker/smk_bitstream.h
	./external/libsmacker/smk_hufftree.c
	./external/libsmacker/smk_hufftree.h
	./external/libsmacker/smk_malloc.h
	
	#imgui
	./external/imgui/imconfig.h
	./external/imgui/imgui.cpp
	./external/imgui/imgui.h
	./external/imgui/imgui_draw.cpp
	./external/imgui/imgui_widgets.cpp
	./external/imgui/examples/imgui_impl_opengl3.cpp
	./external/imgui/examples/imgui_impl_opengl3.h
	./external/imgui/examples/imgui_impl_sdl.cpp
	./external/imgui/examples/imgui_impl_sdl.h

	#lua
	./external/lua/lapi.c
	./external/lua/lapi.h
	./external/lua/lauxlib.c
	./external/lua/lauxlib.h
	./external/lua/lbaselib.c
	./external/lua/lbitlib.c
	./external/lua/lcode.c
	./external/lua/lcode.h
	./external/lua/lcorolib.c
	./external/lua/lctype.c
	./external/lua/lctype.h
	./external/lua/ldblib.c
	./external/lua/ldebug.c
	./external/lua/ldebug.h
	./external/lua/ldo.c
	./external/lua/ldo.h
	./external/lua/ldump.c
	./external/lua/lfunc.c
	./external/lua/lfunc.h
	./external/lua/lgc.c
	./external/lua/lgc.h
	./external/lua/linit.c
	./external/lua/liolib.c
	./external/lua/llex.c
	./external/lua/llex.h
	./external/lua/llimits.h
	./external/lua/lmathlib.c
	./external/lua/lmem.c
	./external/lua/lmem.h
	./external/lua/loadlib.c
	./external/lua/lobject.c
	./external/lua/lobject.h
	./external/lua/lopcodes.c
	./external/lua/lopcodes.h
	./external/lua/loslib.c
	./external/lua/lparser.c
        ./external/lua/lparser.h
	./external/lua/lprefix.h
	./external/lua/lstate.c
	./external/lua/lstate.h
	./external/lua/lstring.c
	./external/lua/lstring.h
	./external/lua/lstrlib.c
	./external/lua/ltable.c
	./external/lua/ltable.h
	./external/lua/ltablib.c
	./external/lua/ltm.c
	./external/lua/ltm.h
	./external/lua/lua.h
	./external/lua/lua.hpp
	./external/lua/luaconf.h
	./external/lua/lualib.h
	./external/lua/lundump.c
	./external/lua/lundump.h
	./external/lua/lutf8lib.c
	./external/lua/lvm.c
	./external/lua/lvm.h
	./external/lua/lzio.c
	./external/lua/lzio.h

)


if (MSVC)
    add_definitions(-DCHEAT_KEYS -DIMGUI_IMPL_OPENGL_LOADER_GLEW -DSCENARIO_EDITOR -DWINDOWS_IGNORE_PACKING_MISMATCH -DTRUE_FALSE_DEFINED -DWIN32 -DWINDOWS -DENGLISH -D_USRDLL -DREDALERT_EXPORTS)
    set_target_properties(RedAlert PROPERTIES OUTPUT_NAME "RedAlert" LINK_FLAGS "/PDB:\"RedAlert.pdb\" /SUBSYSTEM:WINDOWS" RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/.." )
    target_include_directories(RedAlert PRIVATE ./external/;./redalert/win32lib;./external/lua/;./external/imgui;./external/dxsdk/Include;./external/ffmpeg-win32/include;./external/sdl2/include;./win32lib;./external/openal/include)
    target_link_libraries(RedAlert "opengl32.lib" "winmm.lib" "Ws2_32.lib" "${CMAKE_SOURCE_DIR}/external/sdl2/lib/x86/SDL2.lib" "${CMAKE_SOURCE_DIR}/external/openal/out/build/x86-Release/OpenAL32.lib")
endif(MSVC)


if (UNIX)
    add_definitions(-DCHEAT_KEYS -DIMGUI_IMPL_OPENGL_LOADER_GLEW -DSCENARIO_EDITOR -DTRUE_FALSE_DEFINED -DENGLISH -D_USRDLL -DREDALERT_EXPORTS)
    set_target_properties(RedAlert PROPERTIES OUTPUT_NAME "RedAlert"  RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/.." )
    target_include_directories(RedAlert PRIVATE ./external/;./redalert/win32lib;./external/lua/;./external/imgui;./external/dxsdk/Include;./external/ffmpeg-win32/include;./external/sdl2/include;./external/openal/include)
    target_link_libraries(RedAlert "opengl32"  "${CMAKE_SOURCE_DIR}/external/sdl2/lib/x86/SDL2.lib" "${CMAKE_SOURCE_DIR}/external/openal/out/build/x86-Release/OpenAL32.lib")
endif(UNIX)

